Change bot name and add biajo to streamer

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-TMI_TOKEN=oauth:edu8jcim1gwoejgkas2zg4pt675cae
-CLIENT_ID=z2ro73u0peorsv3qp10tvolowzdifg
-BOT_NICK=Nicroz38
+TMI_TOKEN=oauth:bt1nljvaqqkmkyhjgeh4y5vd4forur
+CLIENT_ID=ppm52m3lcpugm7upy5ys04bfdy0auq
+BOT_NICK=NiajoBot
 BOT_PREFIX=!
-CHANNEL=Nicroz38
+CHANNELS=Nicroz38,Biajo
 DATABASE_URL=https://stream-2549c-default-rtdb.firebaseio.com/
 FIREBASE_CONF_PATH=stream-2549c-firebase-adminsdk-w68jz-a8e4f71114.json
