--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-TMI_TOKEN=oauth:bt1nljvaqqkmkyhjgeh4y5vd4forur
-CLIENT_ID=ppm52m3lcpugm7upy5ys04bfdy0auq
+TMI_TOKEN=$TMI_TOKEN
+CLIENT_ID=$CLIENT_ID
 BOT_NICK=NiajoBot
 BOT_PREFIX=!
 CHANNELS=Nicroz38,Biajo
 DATABASE_URL=https://stream-2549c-default-rtdb.firebaseio.com/
-FIREBASE_CONF_PATH=stream-2549c-firebase-adminsdk-w68jz-a8e4f71114.json
+FIREBASE_CONF_PATH=firebase_conf.json
