ajout de linkorep

--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ TMI_TOKEN=$TMI_TOKEN
 CLIENT_ID=$CLIENT_ID
 BOT_NICK=NiajoBot
 BOT_PREFIX=!
-CHANNELS=Nicroz38,Biajo,vega_nosaure
+CHANNELS=Nicroz38,Biajo,vega_nosaure,linkorep
 DATABASE_URL=https://stream-2549c-default-rtdb.firebaseio.com/
 FIREBASE_CONF_PATH=firebase_conf.json
